# acronym_parser

./: README.md  pyproject.toml
src/acronym_parser/: __init__.py
tests/: test_acronyms.py  test_fulltext.py
