[tool.poetry]
name = "acronym_parser"
version = "0.1.0"
description = ""
authors = ["Caralyn Reisle <creisle@bcgsc.ca>"]
readme = "README.md"
packages = [{ include = "acronym_parser", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
bioc = "^2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.13.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.flake8]
ignore = "E503,E501"
line-length = 100
